WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120240
REGRESSION (
r132545
): Some PDFs generated by WebKit are blank when viewed in Adobe Reader
https://bugs.webkit.org/show_bug.cgi?id=120240
Summary
REGRESSION (r132545): Some PDFs generated by WebKit are blank when viewed in ...
Beth Dakin
Reported
2013-08-23 15:32:03 PDT
http://trac.webkit.org/changeset/132545
caused a regression where some PDFs generated by WebKit are blank when viewed in Adobe Reader. It's pretty strange because they are not blank in other PDF-viewers, but we should be able to special-case PDF. <
rdar://problem/14634453
>
Attachments
Patch
(7.11 KB, patch)
2013-08-23 15:40 PDT
,
Beth Dakin
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2013-08-23 15:40:01 PDT
Created
attachment 209517
[details]
Patch
Beth Dakin
Comment 2
2013-08-23 15:56:37 PDT
Thank you!
http://trac.webkit.org/changeset/154528
Simon Fraser (smfr)
Comment 3
2013-08-23 18:09:16 PDT
This broke the windows build.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug